
[TestPane_View_EmptyState - 1]
╭────────────────────────────────────────────────╮
│Layers                                          │
│                                                │
│#    ID      Size A M D Digest Command          │
│No layer data                                   │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
╰────────────────────────────────────────────────╯
---

[TestPane_View_WithLayers - 1]
╭──────────────────────────────────────────────────────────────────────────────╮
│Layers                                                                        │
│                                                                              │
│#    ID      Size A M D Digest Command                                        │
│1/14 28cf    1.1M 0 0 0 23bc2b #(nop) ADD file:ce02                           │
│2/14 1871    6.3k 1 0 0 a65b7d #(nop) ADD file:139c                           │
│3/14 49fe      0b 1 0 0 93e208 mkdir -p /root/examp                           │
│4/14 80cd    6.3k 1 0 0 4abad3 cp /somefile.txt /ro                           │
│5/14 c99e    6.3k 0 1 0 14c9a6 chmod 444 /root/exam                           │
│6/14 5eca    6.3k 1 0 0 778fb5 cp /somefile.txt /ro                           │
│7/14 f07c    6.3k 1 0 0 f275b8 cp /somefile.txt /ro                           │
│8/14 4618    6.3k 1 0 1 dd1eff mv /root/example/som                           │
│9/14 a103    6.3k 1 0 0 8d1869 cp /root/saved.txt /                           │
│10/14 f2fc      0b 0 0 3 bc2e36 rm -rf /root/example                          │
│11/14 aad3    2.1k 2 0 0 7f648d #(nop) ADD dir:7ec14                          │
│12/14 3d4a    6.3k 1 0 0 a4b8f9 cp /root/saved.txt /                          │
│13/14 81b1    6.3k 1 0 0 22a44d cp /root/saved.txt /                          │
│14/14 cfb3    6.3k 0 1 0 ba689c chmod +x /root/saved                          │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
---

[TestPane_View_Focused - 1]
╭──────────────────────────────────────────────────────────────────────────────╮
│Layers                                                                        │
│                                                                              │
│#    ID      Size A M D Digest Command                                        │
│1/14 28cf    1.1M 0 0 0 23bc2b #(nop) ADD file:ce02                           │
│2/14 1871    6.3k 1 0 0 a65b7d #(nop) ADD file:139c                           │
│3/14 49fe      0b 1 0 0 93e208 mkdir -p /root/examp                           │
│4/14 80cd    6.3k 1 0 0 4abad3 cp /somefile.txt /ro                           │
│5/14 c99e    6.3k 0 1 0 14c9a6 chmod 444 /root/exam                           │
│6/14 5eca    6.3k 1 0 0 778fb5 cp /somefile.txt /ro                           │
│7/14 f07c    6.3k 1 0 0 f275b8 cp /somefile.txt /ro                           │
│8/14 4618    6.3k 1 0 1 dd1eff mv /root/example/som                           │
│9/14 a103    6.3k 1 0 0 8d1869 cp /root/saved.txt /                           │
│10/14 f2fc      0b 0 0 3 bc2e36 rm -rf /root/example                          │
│11/14 aad3    2.1k 2 0 0 7f648d #(nop) ADD dir:7ec14                          │
│12/14 3d4a    6.3k 1 0 0 a4b8f9 cp /root/saved.txt /                          │
│13/14 81b1    6.3k 1 0 0 22a44d cp /root/saved.txt /                          │
│14/14 cfb3    6.3k 0 1 0 ba689c chmod +x /root/saved                          │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
---

[TestPane_View_SmallWidth - 1]
╭──────────────────────────────────────╮
│Layers                                │
│                                      │
│#    ID      Size A M D Digest Command│
│1/14 28cf    1.1M 0 0 0 23bc2b #(nop) │
│2/14 1871    6.3k 1 0 0 a65b7d #(nop) │
│3/14 49fe      0b 1 0 0 93e208 mkdir -│
│4/14 80cd    6.3k 1 0 0 4abad3 cp /som│
│5/14 c99e    6.3k 0 1 0 14c9a6 chmod 4│
│6/14 5eca    6.3k 1 0 0 778fb5 cp /som│
│7/14 f07c    6.3k 1 0 0 f275b8 cp /som│
│8/14 4618    6.3k 1 0 1 dd1eff mv /roo│
│9/14 a103    6.3k 1 0 0 8d1869 cp /roo│
│10/14 f2fc      0b 0 0 3 bc2e36 rm -rf│
│11/14 aad3    2.1k 2 0 0 7f648d #(nop)│
│12/14 3d4a    6.3k 1 0 0 a4b8f9 cp /ro│
│13/14 81b1    6.3k 1 0 0 22a44d cp /ro│
│14/14 cfb3    6.3k 0 1 0 ba689c chmod │
│                                      │
╰──────────────────────────────────────╯
---

[TestPane_View_SmallHeight - 1]
╭──────────────────────────────────────────────────────────────────────────────╮
│Layers                                                                        │
│                                                                              │
│#    ID      Size A M D Digest Command                                        │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
---

[TestPane_View_LargeSize - 1]
╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│Layers                                                                                                                │
│                                                                                                                      │
│#    ID      Size A M D Digest Command                                                                                │
│1/14 28cf    1.1M 0 0 0 23bc2b #(nop) ADD file:ce02                                                                   │
│2/14 1871    6.3k 1 0 0 a65b7d #(nop) ADD file:139c                                                                   │
│3/14 49fe      0b 1 0 0 93e208 mkdir -p /root/examp                                                                   │
│4/14 80cd    6.3k 1 0 0 4abad3 cp /somefile.txt /ro                                                                   │
│5/14 c99e    6.3k 0 1 0 14c9a6 chmod 444 /root/exam                                                                   │
│6/14 5eca    6.3k 1 0 0 778fb5 cp /somefile.txt /ro                                                                   │
│7/14 f07c    6.3k 1 0 0 f275b8 cp /somefile.txt /ro                                                                   │
│8/14 4618    6.3k 1 0 1 dd1eff mv /root/example/som                                                                   │
│9/14 a103    6.3k 1 0 0 8d1869 cp /root/saved.txt /                                                                   │
│10/14 f2fc      0b 0 0 3 bc2e36 rm -rf /root/example                                                                  │
│11/14 aad3    2.1k 2 0 0 7f648d #(nop) ADD dir:7ec14                                                                  │
│12/14 3d4a    6.3k 1 0 0 a4b8f9 cp /root/saved.txt /                                                                  │
│13/14 81b1    6.3k 1 0 0 22a44d cp /root/saved.txt /                                                                  │
│14/14 cfb3    6.3k 0 1 0 ba689c chmod +x /root/saved                                                                  │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
---

[TestPane_View_SecondLayerSelected - 1]
╭──────────────────────────────────────────────────────────────────────────────╮
│Layers                                                                        │
│                                                                              │
│#    ID      Size A M D Digest Command                                        │
│1/14 28cf    1.1M 0 0 0 23bc2b #(nop) ADD file:ce02                           │
│2/14 1871    6.3k 1 0 0 a65b7d #(nop) ADD file:139c                           │
│3/14 49fe      0b 1 0 0 93e208 mkdir -p /root/examp                           │
│4/14 80cd    6.3k 1 0 0 4abad3 cp /somefile.txt /ro                           │
│5/14 c99e    6.3k 0 1 0 14c9a6 chmod 444 /root/exam                           │
│6/14 5eca    6.3k 1 0 0 778fb5 cp /somefile.txt /ro                           │
│7/14 f07c    6.3k 1 0 0 f275b8 cp /somefile.txt /ro                           │
│8/14 4618    6.3k 1 0 1 dd1eff mv /root/example/som                           │
│9/14 a103    6.3k 1 0 0 8d1869 cp /root/saved.txt /                           │
│10/14 f2fc      0b 0 0 3 bc2e36 rm -rf /root/example                          │
│11/14 aad3    2.1k 2 0 0 7f648d #(nop) ADD dir:7ec14                          │
│12/14 3d4a    6.3k 1 0 0 a4b8f9 cp /root/saved.txt /                          │
│13/14 81b1    6.3k 1 0 0 22a44d cp /root/saved.txt /                          │
│14/14 cfb3    6.3k 0 1 0 ba689c chmod +x /root/saved                          │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
---

[TestPane_Update_WithLayoutMsg - 1]
╭────────────────────────────────────────────────╮
│Layers                                          │
│                                                │
│#    ID      Size A M D Digest Command          │
│1/14 28cf    1.1M 0 0 0 23bc2b #(nop) ADD file:c│
│2/14 1871    6.3k 1 0 0 a65b7d #(nop) ADD file:1│
│3/14 49fe      0b 1 0 0 93e208 mkdir -p /root/ex│
│4/14 80cd    6.3k 1 0 0 4abad3 cp /somefile.txt │
│5/14 c99e    6.3k 0 1 0 14c9a6 chmod 444 /root/e│
╰────────────────────────────────────────────────╯
---
